@@ -2,6 +2,7 @@
 
 	* Fixed bug #11821: Do not use abbreviations in code
 	* Fixed bug #11777: Add CSH to table headers
+	* Fixed bug #11848: Use labels for the table fields containing the broken links
 
 2011-01-01  Christopher  <chrissitopher@gmx.de>
 
